fix: add missing repo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ name = "nrf-dfu"
 version = "0.1.0"
 license = "MIT OR Apache-2.0"
 description = "Implementation of the Nordic nRF DFU protocol"
+repository = "https://github.com/lulf/nrf-dfu"
 readme = "README.md"
 categories = [
   "embedded",
